--- a/application.json
+++ b/application.json
@@ -15,6 +15,10 @@
     {
       "id": "Page4",
       "isDefault": false
+    },
+    {
+      "id": "Page5",
+      "isDefault": false
     }
   ],
   "viewMode": false,
