--- a/application.json
+++ b/application.json
@@ -31,6 +31,10 @@
     {
       "id": "Page8",
       "isDefault": false
+    },
+    {
+      "id": "Page9",
+      "isDefault": false
     }
   ],
   "viewMode": false,
