--- a/application.json
+++ b/application.json
@@ -35,6 +35,10 @@
     {
       "id": "Page9",
       "isDefault": false
+    },
+    {
+      "id": "Page10",
+      "isDefault": false
     }
   ],
   "viewMode": false,
