--- a/application.json
+++ b/application.json
@@ -39,6 +39,10 @@
     {
       "id": "Page10",
       "isDefault": false
+    },
+    {
+      "id": "Page11",
+      "isDefault": false
     }
   ],
   "viewMode": false,
