--- a/application.json
+++ b/application.json
@@ -43,6 +43,10 @@
     {
       "id": "Page11",
       "isDefault": false
+    },
+    {
+      "id": "Page12",
+      "isDefault": false
     }
   ],
   "viewMode": false,
