--- a/application.json
+++ b/application.json
@@ -47,6 +47,14 @@
     {
       "id": "Page12",
       "isDefault": false
+    },
+    {
+      "id": "Page13",
+      "isDefault": false
+    },
+    {
+      "id": "Page14",
+      "isDefault": false
     }
   ],
   "viewMode": false,
