--- a/application.json
+++ b/application.json
@@ -55,6 +55,10 @@
     {
       "id": "Page14",
       "isDefault": false
+    },
+    {
+      "id": "Page15",
+      "isDefault": false
     }
   ],
   "viewMode": false,
